# platform_investment_fund

./: README.md  pyproject.toml  requirements.txt
ProyectoFinal/: Consumir_Datos.ipynb  Datos_Santander.ipynb  ExtraccionDatosRecetasAcciones.ipynb  TEST_Datos_Santander_Final.ipynb
